--- a/01_document/cap-conceptos.tex
+++ b/01_document/cap-conceptos.tex
@@ -1,66 +1,81 @@
-%% ------------------------------------------------------------------------- %%
-\chapter{Distribución Beta}
-\label{cap:conceptos}
+\chapter{Distribución Weibull}
 
-Introducción al capítulo
+El presente capítulo tiene como objetivo estudiar las principales propiedades de la distribución Weibull vía una reparametrización del modelo original. Dicha distribución se utilizará en los capítulos futuros. Para esta reparametrización, se define su función de probabilidad y sus propiedades (esperanza y varianza).
 
-%% ------------------------------------------------------------------------- %%
-\section{Distribución Beta}
-\label{sec:dbeta}
+\section{Distribución Weibull}
 
-Una clase de distribuciones que permite modelar variables continuas limitadas al intervalo $(0,1)$ es la distribución beta.
+\subsection{Función de densidad}
 
-%% ------------------------------------------------------------------------- %%
-\subsection{Función de densidad de probabilidad}
-\label{sec:fdpbeta}
-la función de densidad de probabilidad de una variable aleatória $Y$ que sigue una distribución beta es dada por
+La distribución Weibull, fue desarrollada por el ingeniero sueco Waloddi Weibull, es una distribución de amplia aplicabilidad (Weibull, 1951). Una variable aleatoria continua $y$, en dónde $y > 0$, tiene distribución Weibull con parámetro de forma $\alpha$ y dispersión $\sigma$ respectivamente si su función de densidad es dada por la siguiente expresión:
 
+\begin{equation*}
+f{(y)}= \frac{\alpha}{\sigma}\left(\frac{y}{\sigma}\right)^{\alpha-1} \exp{\left(-\frac{y}{\sigma}\right)^{\alpha}}
+\end{equation*}
+\noindent en dónde $\alpha > 0$ y $\sigma > 0$. La notación de una variable aleatoria $u$ que sigue esta distribución se indica como $y \sim W(\alpha,\sigma)$.
+.
+Asimismo, la función acumulada de $y$ corresponde a la siguiente expresión:
+
+\[F{(y)}=1-\exp^{-{(\frac{y}{\sigma})}^{\alpha}}.\]
+
+Y la función de cuantiles es dada por:
+
+\[q_{t}=\sigma{(-\log{(1-t)})}^{\frac{1}{\alpha}}\]
+
+\noindent para $0 < t < 1$.
+
+Para dicha variable aleatoria $y$ la media y varianza es de la siguiente forma:
+
+\[E(y)=\sigma \Gamma\left( 1+\frac{1}{\alpha} \right).\]
+\[V(y)=\sigma^{2}\left[ \Gamma\left( 1+\frac{2}{\alpha} \right)-\left( \Gamma\left( 1+\frac{1}{\alpha} \right) \right)^{2} \right].\]
+
+\subsection{Proposición de una nueva estructura de la distribución}
+
+Consideramos, para la distribución Weibull, una reparametrización en términos del cuantil $t, q_{t}$, dada por:
+
+\[q_{t}=\sigma\left( -\log\left( 1-t \right) \right)^{\frac{1}{\alpha}}.\]
+
+Al respecto, cabe indicar que $t$ será un valor conocido y se encuentra en el intervalo $[0,1]$. En esta nueva esctructura, $q_{t}$ y $\alpha$ tienen espacios paramétricos independientes tal que $(q_{t},\alpha) \in (0,\infty)$ x $(0,\infty)$. Una variable aleatoria que sigue esta parametrización se denota como $Y \sim W_{r}(q_{t},\alpha,t)$.
+
+La función de densidad de dicha variable $Y$ tiene la siguiente expresión:
 \begin{equation}
-f_{Y}(y\mid \alpha,\beta)=\frac{\Gamma(\alpha+\beta)}{\Gamma(\alpha)\Gamma(\beta)}
-y^{\alpha-1}(1-y)^{\beta-1}, \ \ \ 0 < y < 1. \label{densidad}
+f_{y}(y| q_{t},\alpha,t)=\frac{\alpha c(t)}{q_{t}}\left( \frac{y}{q_{t}} \right)^{\alpha-1}\exp\left( -c(t)\left( \frac{y}{q_{t}} \right)^{\alpha} \right)
 \end{equation}
+\\
+\noindent en dónde $c(t)= \left( -\log(1-t) \right)^{\frac{1}{\alpha}}$. Los parámetros $q_{t}$ y $\alpha$ caracterizan la función de densidad conforme se observa en el gráfico siguiente:
 
-
-\noindent Esta distribución es bastante flexible para modelar este tipo de datos debido a que su función de densidad de probabilidad puede tomar diversas formas dependiendo del valor de los parámetros que caracterizan a esta distribución (ver figura \ref{densidades}). 
-
-\begin{figure}[!htb]
-\begin{center}
-%\framebox{
-\includegraphics[scale=.80]{densidades}
-%}
-\caption{Densidades de la distribución beta para diferentes valores de los parámetros}
-\label{densidades}
-\end{center}
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{densidad1}
+\caption{Función de densidad de una distribución Weibull bajo la reparametrización propuesta.}
 \end{figure}
 
-%% ------------------------------------------------------------------------- %%
-\subsection{Propiedades}
-\label{sec:betaprop}
+\noindent Se observa que en la medida que $q_{t}$ aumenta, la distribución incrementa su asimetría hacia la derecha. Ello también sucede, aunque en menor grado, cuando $\alpha$ aumenta. No obstante, se observa que en la medida que $\alpha$ tiende a 0, incrementa la dispersión.
 
+Reexpresando la función acumulada en los términos de la parametrización propuesta, esta tendría la siguiente forma:
+\begin{equation} \label{eq:1}
+F_{y}\left(y| q_{t},\alpha,t \right)=1-\exp\left( -c(t)\left( \frac{y}{q_{t}} \right)^{\alpha} \right).
+\end{equation}
+\subsection{Estudio de la parametrización propuesta}
 
-\noindent La media y la variancia de una distribución son expresadas por
+La esperanza y varianza de una variable aleatoria bajo la parametrización Weibull propuesta están dadas bajo la siguiente expresión:
 \begin{equation}
-E(y)=\frac{\alpha} {\alpha + \beta} \ \ \ \ \mbox{y}\ \ \ \  Var(y)=\frac{\alpha \beta}{(\alpha+\beta)^2(\alpha+\beta+1)}.\label{mv}
+E(Y)=\frac{q_{t}}{c(t)^{\frac{1}{\alpha}}}\Gamma\left( 1+\frac{1}{\alpha} \right)
 \end{equation}
 
-
-
-\section{Parametrización alternativa}
-\label{sec:paralter}
-
-Por este motivo, recientemente en la literatura han sido propuestos modelos de regresión basados en esta distribución, por ejemplo ver \citet{betareg}. El modelo propuesto por estos autores permite la interpretación de los parámetros en términos de la respuesta en su escala original (variable respuesta sin transformar). Ellos consideran una reparametrización del modelo donde $\mu = \alpha / (\alpha + \beta)$ y $\phi=\alpha + \beta$, y de (\ref{mv}) obtenemos que 
-
 \begin{equation}
-E(y)=\mu \ \ \ \ \mbox{y}\ \ \ \  Var(y)=\frac{V(\mu)}{1+\phi}
+Var(y)=\frac{q_{t}^{2}}{c(t)^{\frac{1}{\alpha}}}\left[ \Gamma\left( 1+\frac{2}{\alpha}\right)-\Gamma\left( 1+\frac{1}{\alpha} \right)^{2} \right]
 \end{equation}
 
-\noindent donde $V(\mu)=\mu(1-\mu)$, así tenemos que $\mu$ es la media de la variable respuesta y $\phi$ puede ser interpretado como un parámetro de precisión. Luego, en la nueva parametrización la densidad de la distribución beta puede ser escrita como
+Bajo la parametrización propuesta, se observa que para un $\alpha$ fijo el valor esperado se comporta de forma lineal en la medida que aumente el parámetro $q_{t}$ conforme se observa en el cuadro siguiente:
 
-\begin{equation}
-f_{Y}(y\mid \mu,\phi)=\frac{\Gamma(\phi)}{\Gamma(\mu\phi)\Gamma((1-\mu)\phi)}
-y^{\mu\phi-1}(1-y)^{(1-\mu)\phi-1}, \ \ \ 0 < y < 1. \label{densidad2}
-\end{equation}
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{esperado}
+	\caption{Valor esperado de una distribución Weibull bajo la parametrización propuesta.}
+\end{figure}
+\noindent No obstante, para un $q_{t}$ fijo, lo mismo no se observa en la medida que aumente $\alpha$. Se observa un comportamiento no lineal y asintótico: cuando $\alpha$ tiende a 0, el valor esperado tiende a infinito. Cuando $\alpha$ aumenta, el valor esperado se estabiliza.
 
-\noindent donde $0<\mu<1$ y $\phi>0$.
+En el caso de la varianza se observa que para un $\alpha$ fijo, en la medida que aumente el parámetro $q_{t}$ la varianza aumenta de forma exponencial. No obstante, y como se puede apreciar cuando $q_{t}$ está fijo, en la medida que los valores de $\alpha$ sean pequeños, la varianza incrementa drásticamente. Asimismo, como se aprecia en el cuadro adjunto, la varianza tiende a 0 en la medida que $\alpha$ aumente.
 
-
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{varianza}
+	\caption{Varianza bajo la parametrización propuesta.}
+\end{figure}
