--- a/01_document/cap-modelo.tex
+++ b/01_document/cap-modelo.tex
@@ -9,9 +9,9 @@ g(\mu_i)=\sum_{i=1}^{k}x_{ij}\beta_j
 
 \noindent donde $\beta=(\beta_1,...,\beta_k)$ es el vector de parámetros de regresión, $x_{i1},...,x_{ik}$ son valores de $k$ covariables y $g(.)$ es una función de enlace estrictamente monótona y dos veces diferenciable que va de $(0,1)$ a $\Re$. 
 
-Desde un punto de vista clásico, \citet{betareg} consideran la estimación de los parámetros del modelo por el método de máxima verosimilitud. De este modo la inferencia en el modelo está basada en propiedades asintóticas de estos estimadores considerando una muestra suficientemente
+Desde un punto de vista clásico,  consideran la estimación de los parámetros del modelo por el método de máxima verosimilitud. De este modo la inferencia en el modelo está basada en propiedades asintóticas de estos estimadores considerando una muestra suficientemente
 grande.\\
 Sin embargo, en muchas situaciones pr\'acticas el tamaño de muestra puede ser pequeño, o no siéndolo suele existir alguna
 informaci\'on preliminar acerca de los parámetros de interés. Estas situaciones son perfectamente abordados desde la perspectiva
-bayesiana \citep[ver][]{Congdon2003}
-Para la regresi\'on Beta este enfoque fue considerado por \citet{betareg2}. Por este motivo, en la presente tesis se desarrollará el análisis bayesiano del modelo de regresión beta. Entre los tópicos a ser estudiados adicionalmente consideramos: la estimación del modelo utilizando MCMC, selección de modelos utilizando diferente tipos de criterios y aplicaciones a conjuntos de datos reales.
+
+Para la regresi\'on Beta este enfoque fue considerado por . Por este motivo, en la presente tesis se desarrollará el análisis bayesiano del modelo de regresión beta. Entre los tópicos a ser estudiados adicionalmente consideramos: la estimación del modelo utilizando MCMC, selección de modelos utilizando diferente tipos de criterios y aplicaciones a conjuntos de datos reales.
