--- a/01_document/tesis-ejemplo.tex
+++ b/01_document/tesis-ejemplo.tex
@@ -1,8 +1,5 @@
 
 \documentclass[11pt,oneside,a4paper]{book}
-
-% ---------------------------------------------------------------------------- %
-
 \usepackage[spanish]{babel}
 \usepackage[latin1]{inputenc}
 \usepackage[pdftex]{graphicx}           % para insertar figuras en formato pdf/png/jpg
@@ -103,7 +100,7 @@
 %-------------------------------------------
 % Dedicatoria
 \chapter*{Dedicatoria}
-Dedicatoria...
+Dedicatoria
 %-------------------------------------------
 
 
@@ -121,7 +118,7 @@ A mi asesor Cristian Bayes y al profesor Giancarlo Sal y Rosas, quienes ofrecier
 % ---------------------------------------------------------------------------- %
 % Abstract
 \chapter*{Abstract}
-Abstract ...
+Abstract
 
 \noindent \textbf{Keywords:} keyword1, keyword2, keyword3.
 
@@ -133,7 +130,7 @@ Abstract ...
 
 \chapter{Lista de Abreviaturas}
 \begin{tabular}{ll}
- 		fdp     & Función de densidad de probabilidad .\\
+ 		fdp     & Función de densidad de probabilidad.\\
 	pBF 		& Pseudo factor de Bayes(\emph{Pseudo bayes factor}).\\
 \end{tabular}
 
@@ -155,11 +152,7 @@ Abstract ...
 %\doublespacing              % interlineado doble 
 
 \input cap-introduccion      % asociado al archivo: 'cap-introduccion.tex'
-\input cap-conceptos         % asociado al archivo: 'cap-conceptos.tex'
-\input cap-modelo            % asociado al archivo: 'cap-modelo.tex'
-\input cap-simulacion        % asociado al archivo: 'cap-simulacion.tex'
-\input cap-aplicacion        % asociado al archivo: 'cap-aplicacion.tex'
-\input cap-conclusiones      % asociado al archivo: 'cap-conclusiones.tex'
+\input cap-conceptos
 \appendix
 \include{ape-1}      % associado ao arquivo: 'ape-1.tex'
 
