--- a/01_document/tesis-ejemplo.tex
+++ b/01_document/tesis-ejemplo.tex
@@ -151,8 +151,7 @@ Abstract
 \onehalfspacing              % interlineado 1.5
 %\doublespacing              % interlineado doble 
 
-\input cap-introduccion      % asociado al archivo: 'cap-introduccion.tex'
-\input cap-conceptos
+\input cap-introduccion
 \appendix
 \include{ape-1}      % associado ao arquivo: 'ape-1.tex'
 
