--- a/01_document/bibliografia.bib
+++ b/01_document/bibliografia.bib
@@ -53,3 +53,12 @@
   number          = {1},
   year            = {1973}
 }
+
+@article{mun:xu,
+  author          = {Muñoz, Álvaro and Xu, Jane},
+  title           = {Models for the incubation of AIDS and variations according to age and period},
+  journal         = {Statistics in Medicine},
+  volume          = {15},
+  number          = {1},
+  year            = {1996}
+}
