--- a/01_document/tesis-ejemplo.tex
+++ b/01_document/tesis-ejemplo.tex
@@ -151,7 +151,7 @@ Abstract
 \onehalfspacing              % interlineado 1.5
 %\doublespacing              % interlineado doble 
 
-\input cap-introduccion
+\input 01_introducción/cap-introduccion
 \appendix
 \include{ape-1}      % associado ao arquivo: 'ape-1.tex'
 
