--- a/01_document/bibliografia.bib
+++ b/01_document/bibliografia.bib
@@ -62,3 +62,10 @@
   number          = {1},
   year            = {1996}
 }
+
+@article{weib:weib,
+  author          = {Weibull, Waloddi},
+  title           = {A Statistical Distribution Funcion of Wide Applicability},
+  journal         = {Applied Mechanics Division},
+  year            = {1951}
+}
