--- a/01_document/02_modelo/cap-weibull.tex
+++ b/01_document/02_modelo/cap-weibull.tex
@@ -1,38 +1,39 @@
 \chapter{Distribución Weibull}
 
-El presente capítulo tiene el objetivo de proponer una reparametrización de la distribución Weibull para adaptarla al modelo de regresión cuantílica. Se definirán su función de densidad y función acumulada, y asimismo se estudiarán sus propiedades.
+El presente capítulo tiene como objetivo principal proponer una reparametrización de la distribución Weibull para adaptarla al modelo de regresión cuantílica. Para dicha reparametrización, se definirá su función de densidad y función acumulada, y asimismo se examinará sus propiedades.
 
 \section{Distribución Weibull}
 
-\subsection{Función de densidad}
-
-Una variable aleatoria continua $Y$, con soporte $Y \in [0,\infty]$, sigue una distribución Weibull si su función de densidad, la cual tiene parámetro de forma $\alpha$ y dispersión $\sigma$, es dada por la siguiente expresión:
+La distribución Weibull fue presentada por \cite{weib:weib}. En dicho artículo de investigación, Weibull menciona las características de una función de densidad suficientemente flexible para ser adaptada a diversas investigaciones, desde la rama de resistencia de materiales hasta el análisis de altura de hombres adultos radicados en las Islas Británicas. Una variable aleatoria continua $Y$, con soporte $Y \in [0,\infty]$, sigue una distribución Weibull si su función de densidad es dada por la siguiente expresión:
 
 \begin{equation*}
 f{(y)}= \frac{\alpha}{\sigma}\left(\frac{y}{\sigma}\right)^{\alpha-1} \exp{\left(-\frac{y}{\sigma}\right)^{\alpha}}
 \end{equation*}
-\noindent en dónde $\alpha > 0$ y $\sigma > 0$. La notación de una variable aleatoria $Y$ que sigue esta distribución se indica como $Y \sim W(\alpha,\sigma)$. Asimismo, la función acumulada de $Y$ corresponde a la siguiente expresión:
+
+\noindent en dónde $\alpha$ corresponde al parámetro de escala, con $\alpha > 0$, y $\sigma$ corresponde al parámetro de forma, con $\sigma > 0$. La notación de una variable aleatoria $Y$ que sigue esta distribución se indica como $Y \sim W(\alpha,\sigma)$. La función de densidad acumulada de $Y$ tiene la siguiente expresión:
 
 \[F{(y)}=1-\exp^{-{(\frac{y}{\sigma})}^{\alpha}}.\]
 
-y su función de cuantiles es dada por:
+\noindent Asimismo, su función de cuantiles es dada por:
 
 \[q_{t}=\sigma{(-\log{(1-t)})}^{\frac{1}{\alpha}}\]
 
 \noindent para $0 < t < 1$.
 
-Para dicha variable aleatoria $Y$ la media y varianza es de la siguiente forma:
+La flexibilidad denotada por Weibull puede observarse a través de la figura 1, en dónde se observa que el parámetro de forma permite ..... Asimismo, el parámetro de escala permite identificar lo junta que puede ser la distribución,
+
+Para una variable $Y \sim W(\alpha, \sigma)$, la media y varianza se define de la siguiente forma:
 
 \[E(Y)=\sigma \Gamma\left( 1+\frac{1}{\alpha} \right).\]
 \[V(Y)=\sigma^{2}\left[ \Gamma\left( 1+\frac{2}{\alpha} \right)-\left( \Gamma\left( 1+\frac{1}{\alpha} \right) \right)^{2} \right].\]
 
 \subsection{Proposición de una nueva estructura de la distribución}
 
-Consideramos, para la distribución Weibull, una reparametrización en términos del cuantil $t, q_{t}$, dada por:
+Consideramos una reparametrización del parámetro de forma $\sigma$ en términos del cuantil $t, q_{t}$ en los siguientes términos:
 
 \[q_{t}=\sigma\left( -\log\left( 1-t \right) \right)^{\frac{1}{\alpha}}.\]
 
-Al respecto, cabe indicar que $t$ será un valor conocido y se encuentra en el intervalo $[0,1]$. En esta nueva esctructura, $q_{t}$ y $\alpha$ tienen espacios paramétricos independientes tal que $(q_{t},\alpha) \in (0,\infty)$ x $(0,\infty)$. Una variable aleatoria que sigue esta parametrización se denota como $Y \sim W_{r}(q_{t},\alpha)$.
+\noindent en dónde $t$ será un valor conocido y se encuentra en el intervalo $[0,1]$. En esta nueva esctructura, $q_{t}$ y $\alpha$ tienen espacios paramétricos independientes tal que $(q_{t},\alpha) \in (0,\infty)$ x $(0,\infty)$. Una variable aleatoria que sigue esta parametrización se denota como $Y \sim W_{r}(q_{t},\alpha)$.
 
 La función de densidad de dicha variable $Y$ tiene la siguiente expresión:
 \begin{equation}
