--- a/01_document/bibliografia.bib
+++ b/01_document/bibliografia.bib
@@ -55,7 +55,7 @@
 }
 
 @article{mun:xu,
-  author          = {Muñoz, Álvaro and Xu, Jane},
+  author          = {Munoz, Álvaro and Xu, Jane},
   title           = {Models for the incubation of AIDS and variations according to age and period},
   journal         = {Statistics in Medicine},
   volume          = {15},
